--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "UserDbContext": "Server=.\\SQLEXPRESS;Database=UserDetails;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   },
