modified update method

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "UserDbContext": "Server=vw-dev-sql01;Database=UserDetails;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UserDbContext": "Server=.\\SQLEXPRESS;Database=UserDetails;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
